# PyMVP

./: .gitignore  pyotject.toml  pyproject.toml  readme.md
.github/workflows/: publish.yml
PyMVP/: main.py  mvp_routines.py
examples_perso/: new_mvp_analyzer.ipynb
