[project]
name = "PyMVP"
version = "0.2.0"
description = "Python package for Moving Vessel Profiler correction and analysis"
authors = [{name="MaximilienWemaere"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.10.6",
    "gsw>=3.6.20",
    "tqdm>=4.67.1",
    "cartopy>=0.25.0",
    "scipy>=1.16.2",
    "xarray>=2025.9.1",
    "netcdf4>=1.7.2",
]


